--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,8 @@
 	path = code/tacc-openneuro
 	url = https://github.com/poldracklab/tacc-openneuro.git
 	datalad-url = https://github.com/poldracklab/tacc-openneuro.git
+[submodule "sourcedata/raw"]
+	path = sourcedata/raw
+	url = https://github.com/OpenNeuroDatasets/ds001595.git
+	datalad-id = 091db322-e99d-11e8-aff3-0242ac130011
+	datalad-url = https://github.com/OpenNeuroDatasets/ds001595.git
